[tool.poetry]
name = "apnipustak-render"
version = "0.1.0"
description = ""
authors = ["MeDeveloperWeb <www.shivachaurasia@gmail.com>"]
readme = "README.md"
packages = [{include = "apnipustak_render"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
