[tool.poetry]
name = "apnipustak-render"
version = "0.1.0"
description = ""
authors = ["MeDeveloperWeb <www.shivachaurasia@gmail.com>"]
readme = "README.md"
packages = [{include = "apnipustak_render"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"
channels = "^4.0.0"
django-channels = "^0.7.0"
django-avatar = "^7.0.1"
psycopg2-binary = "^2.9.5"
requests = "^2.28.1"
django-allauth = "^0.51.0"
channels-redis = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
